test/e2e/chainsaw/single-tcproute/assertions/tcproute-initial.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcproute-basic
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - backendRefs:
        - name: single-tcproute-stable-service
        - name: single-tcproute-canary-service
          (weight): 0
