test/e2e/chainsaw/single-tcproute/resources/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcproute-basic
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: tcp
      namespace: default
      kind: Gateway
  rules:
    - backendRefs:
        - name: single-tcproute-stable-service
          port: 80
        - name: single-tcproute-canary-service
          port: 80
